padding in embed

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,4 +10,8 @@ body {
     //  h1 {
     //   color: black;
     //  }
+    .markdown-embed {
+        padding-left: 3vw;
+        padding-right: 3vw;
+    }
 }
