--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -11,7 +11,7 @@ body {
     //   color: black;
     //  }
     .markdown-embed {
-        padding-left: 3vw;
-        padding-right: 3vw;
+        padding-left: 3vw !important;
+        padding-right: 3vw !important;
     }
 }
