--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -13,5 +13,6 @@ body {
     .markdown-embed {
         padding-left: 3vw !important;
         padding-right: 3vw !important;
+        background-color: inherit !important;
     }
 }
