--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -14,5 +14,11 @@ body {
         padding-left: 3vw !important;
         padding-right: 3vw !important;
         background-color: inherit !important;
+        border: none;
+        
+        &::before {
+            content"“",
+            font-size: 3em;
+        }
     }
 }
