--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -17,7 +17,7 @@ body {
         border: none;
         
         &::before {
-            content"“",
+            content"“";
             font-size: 3em;
         }
     }
