--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -19,6 +19,8 @@ body {
         &:before {
             content: "“";
             font-size: 3em;
+            osition: absolute;
+            left: 15px;
         }
     }
 }
