--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -19,7 +19,7 @@ body {
         &:before {
             content: "“";
             font-size: 3em;
-            osition: absolute;
+            position: absolute;
             left: 15px;
         }
     }
