--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -25,6 +25,9 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       {% if settings.dgShowInlineTitle === true %}
         <h1>{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}</h1>
       {% endif %}
+      <div class="timestamps">{% if created %}<div>Created At: <span class="human-date" data-date="{{created}}"></span></div>{% endif %}
+      {% if updated %}<div>Updated At: <span class="human-date" data-date="{{updated}}"></span></div>{% endif %}
+      </div>
       {{ content | link | highlight | safe}}
     </div>
 
@@ -35,5 +38,11 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
+
+    <script>
+      document.querySelectorAll('.human-date').forEach(function (el) {
+        el.innerHTML = dayjs(el.getAttribute('data-date')).format('MMM D, YYYY h:mm A');
+      });
+    </script>
   </body>
 </html>
