link fix and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -94,6 +94,10 @@ body {
             display: none !important;
         }
     }
+
+    .transclusion {
+        position: relative;
+    }
 }
 
 // body:not(.remove-pre-rel-lines) ul > li::before, body:not(.remove-pre-rel-lines) ol > li::before {
