link fix and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -97,6 +97,11 @@ body {
 
     .transclusion {
         position: relative;
+        .markdown-embed-link {
+            z-index: 99;
+            display: block;
+            width: auto !important;
+        }
     }
 }
 
