--- a/src/site/lunr.njk
+++ b/src/site/lunr.njk
@@ -8,6 +8,7 @@ eleventyExcludeFromCollections: true
 		"title": {{post.fileSlug | jsonify | safe }},
 		"date":"{{ post.date }}",
 		"url":"{{ post.url }}",
-		"content": {{ post.templateContent | striptags(true) | link | jsonify | safe  }}
+		"content": {{ post.templateContent | striptags(true) | link | jsonify | safe  }},
+		"tags": [{% if post.data.tags %}{% for tag in post.data.tags %}"{{tag}}"{% if not loop.last %},{% endif %}{% endfor %}{% endif %}]
 }{% if not loop.last %},{% endif %}
 {% endfor %}]
