--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -28,6 +28,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       <div class="timestamps">{% if created %}<div>Created At: <span class="human-date" data-date="{{created}}"></span></div>{% endif %}
       {% if updated %}<div>Updated At: <span class="human-date" data-date="{{updated}}"></span></div>{% endif %}
       </div>
+      {% if tags %}<div class="header-tags">{% for tag in tags %}<div class="tag">#{{tag}}</div>{% endfor %}</div>{% endif %}
       {{ content | link | highlight | safe}}
     </div>
 
