--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -25,10 +25,12 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       {% if settings.dgShowInlineTitle === true %}
         <h1>{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}</h1>
       {% endif %}
-      <div class="timestamps">{% if created %}<div>Created At: <span class="human-date" data-date="{{created}}"></span></div>{% endif %}
-      {% if updated %}<div>Updated At: <span class="human-date" data-date="{{updated}}"></span></div>{% endif %}
+      <div class="header-meta">
+        <div class="timestamps">{% if created %}<div>Created At: <span class="human-date" data-date="{{created}}"></span></div>{% endif %}
+        {% if updated %}<div>Updated At: <span class="human-date" data-date="{{updated}}"></span></div>{% endif %}
+        </div>
+        {% if tags %}<div class="header-tags">{% for tag in tags %}<div class="tag">#{{tag}}</div>{% endfor %}</div>{% endif %}
       </div>
-      {% if tags %}<div class="header-tags">{% for tag in tags %}<div class="tag">#{{tag}}</div>{% endfor %}</div>{% endif %}
       {{ content | link | highlight | safe}}
     </div>
 
