--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -9,8 +9,6 @@ body {
         flex-direction: row;
         font-size: 0.8em;
         color: lightslategray;
-        margin-bottom: 2em;
-
         div {
             margin-right: 5px;
         }
@@ -107,6 +105,7 @@ body {
     .header-tags {
         display: flex;
         flex-wrap: wrap;
+        margin-top: 10px;
 
         .tag {
             margin-right: 5px;
@@ -115,6 +114,10 @@ body {
             border-radius: 10px;
             color: #f9f9f9;
         }
+    }
+
+    .header-meta {
+        margin-bottom: 1.8em;
     }
 }
 
