--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -109,6 +109,7 @@ body {
 
         .tag {
             margin-right: 5px;
+            margin-bottom: 5px;
             background-color: #6a86958c;
             padding: 0 5px;
             border-radius: 10px;
