--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -114,6 +114,7 @@ body {
             padding: 0 5px;
             border-radius: 10px;
             color: #f9f9f9;
+            cursor: pointer;
         }
     }
 
