--- a/src/site/_includes/components/searchScript.njk
+++ b/src/site/_includes/components/searchScript.njk
@@ -11,14 +11,6 @@
         }
     }
 
-    window.toggleTagSearch=function(evt) {
-        console.log(evt.textContent);
-        const term = evt.textContent;
-        window.document.getElementById('term').value = term;
-        window.toggleSearch();
-        window.search();
-    }
-
     function debounce(func, wait, immediate) {
         var timeout;
         return function() {
@@ -156,9 +148,7 @@
         resultsHTML += '<div>';
         // we need to add title, url from ref
         results.forEach(r => {
-            resultsHTML += `<div class="searchresult"><a class="search-link" href="${r.url}">${r.title}</a><span onclick="window.location='${r.url}'"><div class="header-meta">
-        {% if tags %}<div class="header-tags">{% for tag in tags %}<div class="tag">#{{tag}}</div>{% endfor %}</div>{% endif %}
-      </div>${r.content}</span></div>`;
+            resultsHTML += `<div class="searchresult"><a class="search-link" href="${r.url}">${r.title}</a><span onclick="window.location='${r.url}'">${r.content}</span></div>`;
         });
         resultsHTML += '</div>';
         resultsDiv.innerHTML = resultsHTML;
