support for metatags

--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -38,7 +38,7 @@
 {% for name, content in metatags %}
   <meta name="{{ name }}" content="{{ content }}">
 {% endfor %}
-{% if not metatags.includes("og:image") %}
+{% if not metatags["og:image"] %}
  <meta name="og:image" content="/img/cover.png">
 {% endif %}
 {% else %}
