--- a/src/site/_includes/components/searchScript.njk
+++ b/src/site/_includes/components/searchScript.njk
@@ -156,7 +156,7 @@
         resultsHTML += '<div>';
         // we need to add title, url from ref
         results.forEach(r => {
-            resultsHTML += `<div class="searchresult"><a class="search-link" href="${r.url}">${r.title}</a><span onclick="window.location='${r.url}'"><div class="header-meta">
+            resultsHTML += `<div class="searchresult"><a class="search-link" href="${r.url}">${r.title}</div><span onclick="window.location='${r.url}'"><div class="header-meta">
         {% if tags %}<div class="header-tags">{% for tag in tags %}<a class="tag" href="JavaScript:Void(0);">#{{tag}}</a>{% endfor %}</a>{% endif %}
       </div>${r.content}</span></div>`;
         });
