--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -106,6 +106,7 @@ body {
         display: flex;
         flex-wrap: wrap;
         margin-top: 10px;
+        gap: 5px;
     }
 
     .header-meta {
