referrence highlight and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -135,7 +135,8 @@ body {
     }
 
     .content > .referred {
-        background-color: lightyellow;
+        background-color: #e4f0e0;
+        padding: 10px;
     }
 }
 
