referrence highlight and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -126,7 +126,8 @@ body {
             top: -1.55em;
             font-weight: normal;
             font-size: 12px;
-            background-color: var(--tag-background);
+            background-color: #e4f0e0;
+            padding: 10px;
             color: var(--tag-color);
             font-variant: initial;
             letter-spacing: 0.24px;
