--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -140,7 +140,9 @@ body {
 
     .content > .referred {
         background-color: rgba(106, 134, 149, 0.31);
-        padding: 10px;   
+        padding: 10px;  
+        margin-left: -10px;
+        margin-right: -10px; 
     }
 }
 
