timestamp formatting and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -9,9 +9,7 @@ body {
         flex-direction: row;
         font-size: 0.8em;
         color: lightslategray;
-        div {
-            margin-right: 5px;
-        }
+        gap: 5px;
     }
 
     h1 {
