theme switch and deploy

--- a/src/site/_includes/layouts/versionednote.njk
+++ b/src/site/_includes/layouts/versionednote.njk
@@ -8,5 +8,6 @@
     <div class="content">
         {{ item.content | safe}}
       </div>
+      {% include "components/themeSwitcher.njk" %}
     </body>
   </html>
