--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -31,5 +31,6 @@
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
+    {% include "components/themeSwitcher.njk" %}
     </body>
   </html>
