--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -73,5 +73,6 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
 
       
     </script>
+    {% include "components/themeSwitcher.njk" %}
   </body>
 </html>
