theme button positioning

--- a/src/site/_includes/components/themeSwitcher.njk
+++ b/src/site/_includes/components/themeSwitcher.njk
@@ -44,6 +44,7 @@
     window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(event) {
         const settings = window.localStorage.getItem('site-theme');
         if (!settings || settings == "auto") {
+            window.localStorage.setItem('site-theme', "auto");
             setTheme("auto", true);
         }
     });
