theme button positioning

--- a/src/site/_includes/components/themeSwitcher.njk
+++ b/src/site/_includes/components/themeSwitcher.njk
@@ -36,7 +36,7 @@
         }
         
     }
-    let theme = window.localStorage.getItem('site-theme') || "auto";
+    let theme = window.localStorage.getItem('site-theme') || "light";
     setTheme(theme, true);
     window.theme = theme;
     window.localStorage.setItem('site-theme', theme);
