--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -74,5 +74,6 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       
     </script>
     {% include "components/themeSwitcher.njk" %}
+    {% include "components/footNote.njk" %}
   </body>
 </html>
