--- a/src/site/_includes/components/filetree.njk
+++ b/src/site/_includes/components/filetree.njk
@@ -4,6 +4,7 @@
             {%if fileOrFolder.isNote %}
                 <div @click.stop class="notelink {{ 'active-note' if fileOrFolder.permalink === permalink}}">
                     {# <i class="fa fa-sticky-note" aria-hidden="true"></i> #}
+                    <object data="{% if fileOrFolder.maturity %}/img/tree-{{fileOrFolder.maturity}}.svg"{% else %}/img/tree-1.svg"{% endif %}" width="auto" height="16"> </object>
                     <a style="text-decoration: none;" class="filename" href="{{fileOrFolder.permalink}}">{{fileOrFolder.name}} </a>
                 </div>
             {% elif fileOrFolder.isFolder%}
