--- a/src/site/_includes/layouts/versionednote.njk
+++ b/src/site/_includes/layouts/versionednote.njk
@@ -6,8 +6,9 @@
   </head>
   <body>
     <div class="content">
-        {{ item.content | safe}}
+        {{ item.content | safe }}
       </div>
+      {% include "components/forest.njk" %}
       {% include "components/themeSwitcher.njk" %}
     </body>
   </html>
