--- a/src/site/_includes/components/forest.njk
+++ b/src/site/_includes/components/forest.njk
@@ -43,6 +43,241 @@ function getPositions(trees) {
     
 }
 
+const treeIcons = [`<svg
+   width="auto"
+   height="15"
+   viewBox="0 0 39.6875 54.239583"
+   version="1.1"
+   id="svg5"
+   sodipodi:docname="tree-1.svg"
+   inkscape:version="1.2.2 (b0a84865, 2022-12-01)"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg">
+ 
+  <defs
+     id="defs2" />
+  <g
+     id="g371">
+    <g
+       id="g363">
+      <g
+         id="g1452"
+         transform="translate(-69.69977,-93.955927)">
+        <g
+           id="g356"
+           transform="matrix(2.4999989,0,0,2.4999989,30.012297,-203.41476)">
+          <path
+             style="fill:none;fill-opacity:1;stroke:green;stroke-width:0.83;stroke-dasharray:none;stroke-opacity:1"
+             d="M 15.874996,140.22917 H 31.750003"
+             id="path309-6-3" />
+          <path
+             style="fill:none;fill-opacity:1;stroke:green;stroke-width:0.976;stroke-dasharray:none;stroke-opacity:1"
+             d="M 23.8125,140.22917 V 134.9375"
+             id="path1162-2-9" />
+          <circle
+             style="fill:none;fill-opacity:1;stroke:green;stroke-width:0.777784;stroke-dasharray:none;stroke-opacity:1"
+             id="path1252-7-9"
+             cx="23.8125"
+             cy="128.77023"
+             r="4.4160662" />
+        </g>
+      </g>
+    </g>
+  </g>
+</svg>`, `<svg
+   width="auto"
+   height="25"
+   viewBox="0 0 39.6875 54.239583"
+   version="1.1"
+   id="svg5"
+   sodipodi:docname="tree-2.svg"
+   inkscape:version="1.2.2 (b0a84865, 2022-12-01)"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg">
+  <sodipodi:namedview
+     id="namedview35"
+     pagecolor="#ffffff"
+     bordercolor="#000000"
+     borderopacity="0.25"
+     inkscape:showpageshadow="2"
+     inkscape:pageopacity="0.0"
+     inkscape:pagecheckerboard="0"
+     inkscape:deskcolor="#d1d1d1"
+     showgrid="false"
+     inkscape:zoom="1.1512195"
+     inkscape:cx="-44.735169"
+     inkscape:cy="214.12076"
+     inkscape:window-width="1800"
+     inkscape:window-height="1097"
+     inkscape:window-x="0"
+     inkscape:window-y="44"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="svg5" />
+  <defs
+     id="defs2" />
+  <g
+     id="g1789"
+     transform="matrix(1.2234287,0,0,1.2234287,-41.659031,-117.81752)">
+    <path
+       style="fill:none;fill-opacity:1;stroke:lightseagreen;stroke-width:0.812;stroke-dasharray:none;stroke-opacity:1"
+       d="m 39.687489,140.22917 h 21.16667"
+       id="path309-6-1" />
+    <path
+       style="fill:none;fill-opacity:1;stroke:lightseagreen;stroke-width:0.803;stroke-dasharray:none;stroke-opacity:1"
+       d="M 50.270824,140.22917 V 119.0625"
+       id="path1162-2-4" />
+    <circle
+       style="fill:none;fill-opacity:1;stroke:lightseagreen;stroke-width:1.01078;stroke-dasharray:none;stroke-opacity:1"
+       id="path1252-7-7"
+       cx="50.270824"
+       cy="111.57232"
+       r="5.7389822" />
+    <g
+       id="g1730">
+      <circle
+         style="fill:none;fill-opacity:1;stroke:lightseagreen;stroke-width:0.689572;stroke-dasharray:none;stroke-opacity:1"
+         id="path1252-3-5"
+         cx="62.230614"
+         cy="124.35416"
+         r="3.9152191" />
+      <circle
+         style="fill:none;fill-opacity:1;stroke:lightseagreen;stroke-width:0.689572;stroke-dasharray:none;stroke-opacity:1"
+         id="path1252-3-6-8"
+         cx="38.311054"
+         cy="124.35416"
+         r="3.9152191" />
+      <path
+         style="fill:none;fill-opacity:1;stroke:lightseagreen;stroke-width:0.803;stroke-dasharray:none;stroke-opacity:1"
+         d="m 39.6875,129.64583 10.583333,2.64583 10.583333,-2.64583"
+         id="path1715" />
+    </g>
+  </g>
+  <rect
+     style="fill:none;fill-opacity:1;stroke:none;stroke-width:0.752669;stroke-dasharray:none;stroke-opacity:1"
+     id="rect1843-7"
+     width="39.6875"
+     height="54.239582"
+     x="125.67709"
+     y="61.26017" />
+  <rect
+     style="fill:none;fill-opacity:1;stroke:none;stroke-width:0.752669;stroke-dasharray:none;stroke-opacity:1"
+     id="rect1843-1"
+     width="39.6875"
+     height="54.239582"
+     x="200.27625"
+     y="-31.75" />
+</svg>`, `<svg
+   width="auto"
+   height="35"
+   viewBox="0 0 39.6875 54.239583"
+   version="1.1"
+   id="svg5"
+   sodipodi:docname="tree-3.svg"
+   inkscape:version="1.2.2 (b0a84865, 2022-12-01)"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg">
+  <sodipodi:namedview
+     id="namedview35"
+     pagecolor="#ffffff"
+     bordercolor="#000000"
+     borderopacity="0.25"
+     inkscape:showpageshadow="2"
+     inkscape:pageopacity="0.0"
+     inkscape:pagecheckerboard="0"
+     inkscape:deskcolor="#d1d1d1"
+     showgrid="false"
+     showguides="true"
+     inkscape:zoom="1.1512195"
+     inkscape:cx="-98.591102"
+     inkscape:cy="184.58686"
+     inkscape:window-width="1800"
+     inkscape:window-height="1097"
+     inkscape:window-x="0"
+     inkscape:window-y="44"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="svg5" />
+  <defs
+     id="defs2" />
+  <g
+     id="g1780"
+     transform="translate(-93.927082,-85.072667)">
+    <circle
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.689572;stroke-dasharray:none;stroke-opacity:1"
+       id="path1252-3-5-4"
+       cx="127.00001"
+       cy="116.36313"
+       r="3.9152191" />
+    <circle
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.689572;stroke-dasharray:none;stroke-opacity:1"
+       id="path1252-3-6-8-6"
+       cx="100.54166"
+       cy="116.36313"
+       r="3.9152191" />
+    <path
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.812;stroke-dasharray:none;stroke-opacity:1"
+       d="m 103.18749,138.90625 h 21.16667"
+       id="path309-6-1-0" />
+    <path
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.803;stroke-dasharray:none;stroke-opacity:1"
+       d="M 113.77083,138.90625 V 99.21875"
+       id="path1162-2-4-3" />
+    <circle
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:1.01078;stroke-dasharray:none;stroke-opacity:1"
+       id="path1252-7-7-2"
+       cx="113.77082"
+       cy="91.728561"
+       r="5.7389822" />
+    <path
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.803;stroke-dasharray:none;stroke-opacity:1"
+       d="m 100.54166,123.03125 5.29167,5.29166 h 7.9375"
+       id="path1620" />
+    <path
+       style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.803;stroke-dasharray:none;stroke-opacity:1"
+       d="m 126.99999,123.03125 -5.29166,5.29166 h -7.9375"
+       id="path1622" />
+    <g
+       id="g1730-5"
+       transform="translate(63.5,-21.16666)">
+      <circle
+         style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.689572;stroke-dasharray:none;stroke-opacity:1"
+         id="path1252-3-5-2"
+         cx="62.230614"
+         cy="124.35416"
+         r="3.9152191" />
+      <circle
+         style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.689572;stroke-dasharray:none;stroke-opacity:1"
+         id="path1252-3-6-8-2"
+         cx="38.311054"
+         cy="124.35416"
+         r="3.9152191" />
+      <path
+         style="fill:none;fill-opacity:1;stroke:seagreen;stroke-width:0.803;stroke-dasharray:none;stroke-opacity:1"
+         d="m 39.6875,129.64583 10.583333,2.64583 10.583333,-2.64583"
+         id="path1715-6" />
+    </g>
+  </g>
+  <rect
+      style="fill:none;fill-opacity:1;stroke:none;stroke-width:0.752669;stroke-dasharray:none;stroke-opacity:1"
+      id="rect1843-7"
+      width="39.6875"
+      height="54.239582"
+      x="125.67709"
+      y="61.26017" />
+  <rect
+     style="fill:none;fill-opacity:1;stroke:none;stroke-width:0.752669;stroke-dasharray:none;stroke-opacity:1"
+     id="rect1843-1"
+     width="39.6875"
+     height="54.239582"
+     x="200.27625"
+     y="-31.75" />
+</svg>`];
+
 const trees = getPositions(canvasTrees);
 console.log(trees);
 const forest = document.createElement('div');
@@ -58,7 +293,7 @@ for (let i = trees.length - 1; i > -1; i--) {
         tree.classList.add('tree');
         tree.setAttribute('href', rowTree[1]);
         tree.setAttribute('title', rowTree[2]);
-        tree.innerHTML = `<object data="/img/tree-${height}-colored.svg" width="auto" height="${5 + (height * 10)}"></object>`
+        tree.innerHTML = treeIcons[height - 1];
         row.appendChild(tree);
     }
     forest.appendChild(row);
