--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -12,9 +12,16 @@ body {
         gap: 5px;
     }
 
+    .notelink {
+        img {
+            height: 16px;
+            width: auto;
+        }
+    }
+
     h1 {
         font-size: 2em !important; /* 40px/16=2.5em */
-        svg {
+        img {
             height: 32px;
             width: auto;
         }
@@ -200,16 +207,18 @@ body {
                 align-items: flex-end;
 
                 .tree {
-                    transform: rotate(-45deg);
+                    
                     width: 25px;
                     height: 25px;
                     cursor: pointer;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    margin-top: -2px;
+                    margin-left: -2px;
 
-                    object {
-                        pointer-events: none;
+                    img {
+                        transform: rotate(-45deg);
                     }
                 }
 
