--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -222,6 +222,10 @@ body {
                     }
                 }
 
+                .plane {
+                    cursor: inherit;
+                }
+
                 .tree-1 {
                     color: lightblue;
                 }
