--- a/src/site/_includes/components/forest.njk
+++ b/src/site/_includes/components/forest.njk
@@ -1,69 +1,17 @@
-<script>
-const canvasTrees = [{% for post in collections.note %}
-{% if post.data.maturity %}
-     [{{post.data.maturity}}, "{{post.url}}", {% if post.data.title %}{{post.data.title | jsonify | safe }}{% else %}{{post.fileSlug | jsonify | safe }}{% endif %}]
-{% else %}
-    [1, "{{post.url}}", {% if post.data.title %}{{post.data.title | jsonify | safe }}{% else %}{{post.fileSlug | jsonify | safe }}{% endif %}]
-{% endif %}{% if not loop.last %},{% endif %}
-{% endfor %}]
-
-function shuffle(a) {
-    var j, x, i;
-    for (i = a.length - 1; i > 0; i--) {
-        j = Math.floor(Math.random() * (i + 1));
-        x = a[i];
-        a[i] = a[j];
-        a[j] = x;
-    }
-    return a;
-}
-
-function sliceIntoChunks(arr, chunkSize) {
-    const res = [];
-    for (let i = 0; i < arr.length; i += chunkSize) {
-        const chunk = arr.slice(i, i + chunkSize);
-        res.push(chunk);
-    }
-    return res;
-}
-
-function getPositions(trees) {
-    let minInRow = Math.floor(Math.sqrt(trees.length));
-    let maxInRow = Math.ceil(Math.sqrt(trees.length));
-    if (minInRow < maxInRow) {
-        trees = trees.concat(Array(Math.pow(maxInRow, 2) - trees.length).fill([0, '', '']));
-    }
-    console.log(trees, maxInRow, minInRow);
-    trees = shuffle([...trees]);
-    let levels = sliceIntoChunks(trees, maxInRow);
-    return levels
-}
-
-const trees = getPositions(canvasTrees);
-console.log(trees);
-const forest = document.createElement('div');
-forest.classList.add('forest-body');
-for (let i = trees.length - 1; i > -1; i--) {
-    let rowTrees = trees[i]
-    let row = document.createElement('div');
-    row.classList.add('forest-row');
-    for (let j = 0; j < rowTrees.length; j++) {
-        const rowTree = rowTrees[j]
-        const height = rowTree[0];
-        let tree = document.createElement('a');
-        tree.classList.add('tree');
-        if (height == 0) {
-            tree.classList.add('plane');
-            tree.innerHTML = `<span></span>`;
-        } else {
-            
-            tree.setAttribute('href', rowTree[1]);
-            tree.setAttribute('title', rowTree[2]);
-            tree.innerHTML = `<img src="/img/tree-${height}.svg" style="width: auto;height: ${5 + (10 * height)}px;" />`;
-        }
-        row.appendChild(tree);
-    }
-    forest.appendChild(row);
-}
-document.querySelector("#forest-graph").appendChild(forest);
-</script>
+<div id="forest-graph">
+    <div class="forest-body">
+        {% for row in forestData %}
+        <div class="forest-row">
+            {% for tree in row %}
+            <a class="tree {% if tree[0] == 0 %}plane{% endif %}" {% if tree[0] > 0 %}href="{{tree[1]}}" title="{{tree[1]}}"{% endif %}>
+                {% if tree[0] == 0 %}
+                <span></span>
+                {% else %}
+                <img src="/img/tree-{{tree[0]}}.svg" style="width: auto;height: {{5 + (10 * tree[0])}}px;" />
+                {% endif %}
+            </a>
+            {% endfor %}
+        </div>
+        {% endfor %}
+    </div>
+</div>
