--- a/src/site/_includes/components/themeSwitcher.njk
+++ b/src/site/_includes/components/themeSwitcher.njk
@@ -1,3 +1,4 @@
+<a href="mailto:connect@utsob.me?subject=Regarding {{title}}&body=Discussing {{meta.siteBaseUrl}}{{permalink}}"><i class="fa fa-envelope-o" title="Discuss" id="emailme" aria-hidden="true"></i></a>
 <i class="fa" id="theme-switch" aria-hidden="true"></i>
     
 <script>
