--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -241,3 +241,172 @@ body {
         }
     }
 }
+
+
+div.language-ad-note,
+div.callout-note {
+    background-color: transparent !important;
+    border: 1px solid rgba(68, 138, 255, .5);
+}
+
+div.language-ad-seealso,
+div.callout-seealso {
+    background-color: transparent !important;
+    border: 1px solid rgba(68, 138, 255, .5);
+}
+
+div.language-ad-abstract,
+div.callout-abstract {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 176, 255, .5);
+}
+
+div.language-ad-summary,
+div.callout-summary {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 176, 255, .5);
+}
+
+div.language-ad-tldr,
+div.callout-tldr {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 176, 255, .5);
+}
+
+div.language-ad-info,
+div.callout-info {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 184, 212, .5);
+}
+
+div.language-ad-todo,
+div.callout-todo {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 184, 212, .5);
+}
+
+div.language-ad-tip,
+div.callout-tip {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 191, 165, .5);
+}
+
+div.language-ad-hint,
+div.callout-hint {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 191, 165, .5);
+}
+
+div.language-ad-important,
+div.callout-important {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 191, 165, .5);
+}
+
+div.language-ad-success,
+div.callout-success {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 200, 83, .5);
+}
+
+div.language-ad-check,
+div.callout-check {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 200, 83, .5);
+}
+
+div.language-ad-done,
+div.callout-done {
+    background-color: transparent !important;
+    border: 1px solid rgba(0, 200, 83, .5);
+}
+
+div.language-ad-question,
+div.callout-question {
+    background-color: transparent !important;
+    border: 1px solid rgba(100, 221, 23, .5);
+}
+
+div.language-ad-help,
+div.callout-help {
+    background-color: transparent !important;
+    border: 1px solid rgba(100, 221, 23, .5);
+}
+
+div.language-ad-faq,
+div.callout-faq {
+    background-color: transparent !important;
+    border: 1px solid rgba(100, 221, 23, .5);
+}
+
+div.language-ad-warning,
+div.callout-warning {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 145, 0, .5);
+}
+
+div.language-ad-caution,
+div.callout-caution {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 145, 0, .5);
+}
+
+div.language-ad-attention,
+div.callout-attention {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 145, 0, .5);
+}
+
+div.language-ad-failure,
+div.callout-failure {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 82, 82, .5);
+}
+
+div.language-ad-fail,
+div.callout-fail {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 82, 82, .5);
+}
+
+div.language-ad-missing,
+div.callout-missing {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 82, 82, .5);
+}
+
+div.language-ad-danger,
+div.callout-danger {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 23, 68, .5);
+}
+
+div.language-ad-error,
+div.callout-error {
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 23, 68, .5);
+}
+
+div.language-ad-bug,
+div.callout-bug {
+    background-color: transparent !important;
+    border: 1px solid rgba(245, 0, 87, .5);
+}
+
+div.language-ad-example,
+div.callout-example {
+    background-color: transparent !important;
+    border: 1px solid rgba(124, 77, 255, .5);
+}
+
+div.language-ad-quote,
+div.callout-quote {
+    background-color: transparent !important;
+    border: 1px solid rgba(158, 158, 158, .5);
+}
+
+div.language-ad-cite,
+div.callout-cite {
+    background-color: transparent !important;
+    border: 1px solid rgba(158, 158, 158, .5);
+}
