--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -122,7 +122,7 @@ body {
         margin-bottom: 1.8em;
     }
     
-    .content > *[id] {
+    .cm-s-obsidian > *[id] {
         position: relative;
         cursor: pointer;
         &:hover {
