--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -17,9 +17,23 @@
     <div class="content cm-s-obsidian">
 
       {% if settings.dgShowInlineTitle === true %}
-        <h1>{{ noteTitle }}</h1>
+        <h1>{{ noteTitle  }}</h1>
       {% endif %}
-      {% include "components/forest.njk" %}
+
+      <div class="header-meta">
+        {% if settings.dgShowTags === true and tags %}
+          <div class="header-tags">
+            {% for tag in tags %}
+              {% if tag != 'gardenEntry' and tag !='note' %}
+                <a class="tag" onclick="toggleTagSearch(this)">
+                  #{{tag}}
+                </a>
+              {% endif %}
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
+
       {%- for garden in collections.gardenEntry -%}
         {{garden.templateContent | link | highlight | safe }}
       {%- endfor -%}
@@ -32,6 +46,5 @@
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
-    {% include "components/themeSwitcher.njk" %}
     </body>
   </html>
